--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@vvo/tzdb": "^6.125.0",
-    "countries-and-timezones": "^3.6.0",
+    "clsx": "^2.1.0",
     "fuse.js": "^7.0.0",
     "jotai": "^2.6.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.2.0",
-    "timezones.json": "^1.7.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "timezones.json": "^1.7.1",
+    "countries-and-timezones": "^3.6.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -29,7 +29,6 @@
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
-    "tw-colors": "^3.3.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vite-plugin-bundlesize": "^0.0.7"
