--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@vvo/tzdb": "^6.125.0",
+    "array-utils-ts": "^0.1.2",
     "clsx": "^2.1.0",
     "fuse.js": "^7.0.0",
     "jotai": "^2.6.2",
@@ -18,17 +19,17 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "timezones.json": "^1.7.1",
-    "countries-and-timezones": "^3.6.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.17",
+    "countries-and-timezones": "^3.6.0",
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
+    "timezones.json": "^1.7.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vite-plugin-bundlesize": "^0.0.7"
