--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "clsx": "^2.1.0",
     "fuse.js": "^7.0.0",
     "jotai": "^2.6.2",
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react-swc": "^3.5.0",
