--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
-  "search.exclude": {},
+  "search.exclude": {
+    "yarn.lock": true
+  },
   "files.exclude": {
     "bundlemeta.json": true,
     "dist": true
