--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "fuse.js": "^7.0.0",
     "jotai": "^2.6.2",
     "lodash-es": "^4.17.21",
+    "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.12",
+    "@types/luxon": "^3.4.2",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react-swc": "^3.5.0",
