--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8",
-    "vite-plugin-bundlesize": "^0.0.7"
+    "vite": "^5.0.8"
   }
 }
