--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lodash-es": "^4.17.21",
     "luxon": "^3.4.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "wouter": "^2.12.1"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.12",
