--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "search.exclude": {
-    "yarn.lock": true
+    "yarn.lock": true,
+    "src/utils/geonames.json": true
   },
   "files.exclude": {
     "bundlemeta.json": true,
