replace heroicons with tabler; fix weekends detection; add donation button

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.1",
+    "@tabler/icons-react": "^2.47.0",
     "array-utils-ts": "^0.1.2",
     "clsx": "^2.1.0",
     "fuse.js": "^7.0.0",
