--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "bundle-size": "vite-bundle-visualizer"
   },
   "dependencies": {
     "@tabler/icons-react": "^2.47.0",
@@ -33,6 +34,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vite-bundle-visualizer": "^1.0.1"
   }
 }
