--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "vite-bundle-visualizer": "^1.0.1"
+    "vite-bundle-visualizer": "^1.0.1",
+    "vite-plugin-pwa": "^0.17.5"
   }
 }
