--- a/package.json
+++ b/package.json
@@ -14,22 +14,23 @@
     "array-utils-ts": "^0.1.2",
     "clsx": "^2.1.0",
     "fuse.js": "^7.0.0",
-    "jotai": "^2.6.2",
+    "jotai": "^2.6.4",
     "lodash-es": "^4.17.21",
     "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "wouter": "^2.12.1"
+    "wouter": "^3.0.0"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.12",
     "@types/luxon": "^3.4.2",
-    "@types/react": "^18.2.43",
+    "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitejs/plugin-react-swc": "^3.6.0",
     "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.33",
-    "prettier": "^3.2.4",
+    "postcss": "^8.4.34",
+    "postcss-import": "^16.0.0",
+    "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
