--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
           cache: "yarn"
 
       - run: yarn install --frozen-lockfile
+      - run: yarn ci
       - run: yarn build
 
       - uses: cloudflare/pages-action@v1
