--- a/package.json
+++ b/package.json
@@ -5,38 +5,41 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc --noEmit && vite build",
     "preview": "vite preview",
-    "bundle-size": "vite-bundle-visualizer"
+    "bundle-size": "vite-bundle-visualizer",
+    "format": "prettier --log-level warn --write .",
+    "lint": "tsc --noEmit && prettier --check .",
+    "ci": "yarn lint && yarn build"
   },
   "dependencies": {
-    "@tabler/icons-react": "^3.12.0",
-    "array-utils-ts": "^0.1.2",
-    "clsx": "^2.1.1",
-    "fuse.js": "^7.0.0",
-    "jotai": "^2.9.3",
-    "lodash-es": "^4.17.21",
-    "luxon": "^3.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "wouter": "^3.3.1"
+    "@tabler/icons-react": "3.19.0",
+    "array-utils-ts": "1.0.1",
+    "clsx": "2.1.1",
+    "fuse.js": "7.0.0",
+    "jotai": "2.10.0",
+    "lodash-es": "4.17.21",
+    "luxon": "3.5.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "wouter": "3.3.5"
   },
   "devDependencies": {
-    "@types/lodash-es": "^4.17.12",
-    "@types/luxon": "^3.4.2",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.7.0",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.41",
-    "postcss-import": "^16.1.0",
-    "prettier": "^3.3.3",
-    "prettier-plugin-organize-imports": "^4.0.0",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.1",
-    "vite-bundle-visualizer": "^1.2.1",
-    "vite-plugin-pwa": "^0.20.1"
+    "@types/lodash-es": "4.17.12",
+    "@types/luxon": "3.4.2",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.1",
+    "@vitejs/plugin-react-swc": "3.7.1",
+    "autoprefixer": "10.4.20",
+    "postcss": "8.4.47",
+    "postcss-import": "16.1.0",
+    "prettier": "3.3.3",
+    "prettier-plugin-organize-imports": "4.1.0",
+    "prettier-plugin-tailwindcss": "0.6.8",
+    "tailwindcss": "3.4.13",
+    "typescript": "5.6.3",
+    "vite": "5.4.8",
+    "vite-bundle-visualizer": "1.2.1",
+    "vite-plugin-pwa": "0.20.5"
   }
 }
